[metadata]
name = instahashtag
author = Felipe Faria
author-email = felipefaria@hey.com
summary = Unofficial Python wrapper for DisplayPurposes.com.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5
home-page = https://github.com/synchronizing/instahashtag
project_urls =
    Bug Tracker = https://github.com/synchronizing/instahashtag/issues
    Documentation = https://github.com/synchronizing/instahashtag/
    Source Code = https://github.com/synchronizing/instahashtag/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    instagram
    displaypurposes
    wrapper

[files]
packages =
    instahashtag
